# FastAPIEpamFinalProject

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  prek.toml  pyproject.toml  ruff.toml
.github/workflows/: cd.yml  ci.yml  infra-deploy.yml
app/: .env.template  alembic.ini  create_app.py  main.py
app/alembic/: env.py
app/alembic/versions/: 2026_06_21_1831-030d95011cc5_add_user_model.py  2026_06_21_1901-df2b9e27b23f_add_observablemixin_for_user_model.py  2026_06_21_1934-b903a6219ef2_add_project_model.py  2026_06_21_1954-3022ede637ee_add_document_model.py  2026_06_21_2047-6fbf52d29503_add_user_model.py  2026_06_22_1319-80e3f11914c5_add_check_constraints_for_document_model.py  2026_06_22_1335-4befb046a318_add_check_constraints_for_user_model.py  2026_06_22_1349-f2698bdb56cc_add_check_constraints_for_project_model.py  2026_06_24_1607-cd128bfed766_set_project_model_description_to_.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  auth.py  document.py  project.py
app/constants/: __init__.py  auth.py  db.py  document.py  env_type.py  project.py  project_member.py  role_type.py  token.py  user.py
app/constants/messages/: auth.py  authentication.py  authorization.py  config.py  db.py  file.py  mail.py
app/core/: config.py
app/core/auth/: jwt.py  password.py
app/core/models/: __init__.py  base.py  db.py  document.py  project.py  project_member.py  user.py
app/core/models/mixins/: __init__.py
app/dependencies/: __init__.py  auth.py  domain.py  file.py  infrastructure.py  repositories.py  services.py  usages.py
app/domain/: base.py  document.py  project.py
app/exceptions/: auth.py  authentication.py  authorization.py  db.py  file.py  mail.py
app/exceptions/handlers/: __init__.py  auth.py  authentication.py  authorization.py  db.py  file.py
app/mail/: base.py  fastapi_mail.py  ses.py
app/repositories/: base.py  document.py  project.py  project_member.py  unit_of_work.py  user.py
app/repositories/handlers/: base.py  document.py  project.py  project_member.py  user.py
app/schemas/: base.py  db.py  document.py  mail.py  project.py  project_member.py  storage.py  token.py  user.py
app/services/: base.py  user.py
app/storage/: key.py  rollback.py  s3.py
app/templates/mail/: share.html
app/usages/documents/: create.py  delete.py  list.py  retrieve.py  update.py
app/usages/projects/: create.py  delete.py  invite.py  join.py  list.py  retrieve.py  share.py  update.py
app/usages/users/: login.py
app/utils/: __init__.py  password_validator.py  url.py
infrastructure/: main.yml
infrastructure/localstack/: init-aws.sh  local-template.yaml
scripts/: entrypoint.sh  run_migrations.sh
tests/: conftest.py
tests/constants/: messages.py
tests/factories/: document.py  mail.py  project.py  project_member.py  token.py  user.py
tests/fixtures/: auth.py  client.py  config.py  core_mocks.py  db.py
tests/integration/api/api_v1/: test_auth.py  test_project.py
tests/integration/fixtures/: document.py  project.py  project_member.py  user.py
tests/integration/repositories/: test_base.py  test_document.py  test_project.py  test_project_member.py  test_user.py
tests/integration/services/: test_base.py  test_user.py
tests/support/: dummy_model.py
tests/unit/: conftest.py
tests/unit/core/auth/: test_jwt.py  test_password.py
tests/unit/dependencies/: test_auth.py
tests/unit/domain/: test_base.py  test_document.py  test_project.py
tests/unit/fixtures/: domains.py  repos.py  services.py  storage.py  usages.py  utils.py
tests/unit/mail/: test_fastapi_mail.py  test_ses.py
tests/unit/repositories/: test_document.py  test_project.py  test_project_member.py  test_unit_of_work.py  test_user.py
tests/unit/repositories/handlers/: test_base.py
tests/unit/services/: test_user.py
tests/unit/storage/: s3.py  test_key.py  test_rollback.py
tests/unit/usages/documents/: test_delete.py  test_list.py  test_retrieve.py
tests/unit/usages/projects/: test_create.py  test_delete.py  test_invite.py  test_join.py  test_list.py  test_retrieve.py  test_share.py  test_update.py
tests/unit/usages/users/: test_login.py
tests/unit/utils/: test_case_converter.py  test_password_validator.py
tests/utils/: __init__.py  should_run_db.py
