[project]
name = "fastapibaseapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "prek>=0.4.1",
    "ruff>=0.15.14",
]


[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
