[project]
name = "fastapibaseapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "prek>=0.4.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.14",
    "testcontainers>=4.14.2",
]


[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]
exclude = [
    "app/alembic",
]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]

addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

env = [
    "APP_CONFIG__DB__URL=postgresql+asyncpg://fake:fake@localhost:5432/fake",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]


[tool.coverage.run]
source = ["app"]
branch = true


[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "-Cover"

omit = [
    "app/alembic/*",
    "app/main.py",
]
