[project]
name = "fastapibaseapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "dishka>=1.10.1",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "polyfactory>=3.3.0",
    "prek>=0.4.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.14",
    "testcontainers>=4.14.2",
]


[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
    "pydantic.mypy"
]
exclude = [
    "app/alembic",
]


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["./app"]

addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

markers = [
    "requires_db: tests that require a running PostgreSQL database and testcontainers",
]

asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

env = [
    "APP_CONFIG__DB__HOST=localhost",
    "APP_CONFIG__DB__PORT=5432",
    "APP_CONFIG__DB__NAME=fake",
    "APP_CONFIG__DB__USER=fake",
    "APP_CONFIG__DB__PASSWORD=fake",
    "APP_CONFIG__S3__BUCKET_NAME=fake",
    "APP_CONFIG__S3__REGION=fake",
    "APP_CONFIG__AUTH__SECRET_KEY=super_secret_test_key_only_for_ci_cd",
]

xfail_strict = true
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]


[tool.coverage.run]
source = ["app"]
branch = true


[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "-Cover"

omit = [
    "app/alembic/*",
    "app/main.py",
]

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
